# log4rs-rolling-file

./: .gitignore  .travis.yml  Cargo.toml  README.md
codegen/: Cargo.toml
codegen/src/: main.rs
doc/v0.1.0/: search-index.js
doc/v0.1.0/log4rs_rolling_file/: fn.register.html  index.html  sidebar-items.js  struct.RollingFileAppender.html  struct.RollingFileAppenderBuilder.html  struct.RollingFileAppenderDeserializer.html
doc/v0.1.0/log4rs_rolling_file/roll/: index.html  trait.Roll.html
doc/v0.1.0/log4rs_rolling_file/trigger/: index.html  sidebar-items.js  struct.LogFile.html  trait.Trigger.html
doc/v0.1.1/log4rs_rolling_file/: fn.register.html  index.html  struct.RollingFileAppender.html  struct.RollingFileAppenderBuilder.html  struct.RollingFileAppenderDeserializer.html
doc/v0.1.1/log4rs_rolling_file/roll/: index.html  (+1 more)
doc/v0.1.2/log4rs_rolling_file/: fn.register.html  index.html  struct.RollingFileAppender.html  struct.RollingFileAppenderBuilder.html  struct.RollingFileAppenderDeserializer.html
doc/v0.2.0/: search-index.js
doc/v0.2.0/log4rs_rolling_file/: fn.register.html  index.html  sidebar-items.js  struct.LogFile.html  struct.RollingFileAppender.html  struct.RollingFileAppenderBuilder.html  struct.RollingFileAppenderDeserializer.html
src/: config.rs  config.rs.in  lib.rs  roll.rs
src/policy/: mod.rs
src/policy/compound/: config.rs  config.rs.in  mod.rs
src/roll/: mod.rs
src/roll/delete/: config.rs  mod.rs
src/roll/fixed_window/: config.rs  config.rs.in  mod.rs
src/trigger/: mod.rs
src/trigger/size/: config.rs  config.rs.in  mod.rs
(+113 files in other folders)
